--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header>
         <div class="photo-profil">
           <a href="./images/R.png">
-            <img class="img-arrondi" src="./images/R.png" alt="photo Océane" />
+            <img id="photo" src="./images/R.png" alt="photo Océane" />
           </a>
           <h1>Taquin Océane</h1>
           <h3>Développeuse Web et Web Mobile junior</h3>
