Add HTML modif header

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
   <body>
     <div class="container">
       <header>
-        <div class="photo-profil">
+        <div id="photo">
           <a href="./images/R.png">
             <img id="photo" src="./images/R.png" alt="photo Océane" />
           </a>
+        </div>
+        <div id="header">
           <h1>Taquin Océane</h1>
           <h3>Développeuse Web et Web Mobile junior</h3>
         </div>
