Add approche HTML et CSS

--- a/index.html
+++ b/index.html
@@ -31,26 +31,18 @@
         </div>
       </header>
 
-      <section class="bloc-info" id="informations">
-        <div class="element element1">
-          <a
-            href="https://www.google.be/maps/search/+12+Rue+des+Olivier+53200+La+Roche-Neuville/@47.8798736,-0.7599633,14z?entry=ttu"
-          >
-            <i>adresse: 12 Rue des Olivier</i>
-            <i>53200 La Roche-Neuville</i>
-          </a>
-        </div>
-        <div class="element element2">
-          <a href="mailto:jane.doe@gmail.com">
-            <i>email: jane.doe@gmail.com</i>
-          </a>
-        </div>
-        <div class="element element3">
-          <a href="tel:0606060606">
-            <i>n°: 0606060606</i>
-          </a>
-        </div>
-      </section>
+      <address id="address">
+        <a
+          id="info1"
+          href="https://www.google.be/maps/search/+12+Rue+des+Olivier+53200+La+Roche-Neuville/@47.8798736,-0.7599633,14z?entry=ttu"
+          target="_blank"
+          >adresse: 12 Rue des Olivier <br />53200 La Roche-Neuville</a
+        >
+        <a id="info2" href="mailto:jane.doe@gmail.com"
+          >email: jane.doe@gmail.com</a
+        >
+        <a id="info3" href="tel:0606060606">n°: 0606060606</a>
+      </address>
 
       <main class="bloc-content" id="Contenu">
         <aside class="bloc-propos" id="A-propos">
