Add modif html et css

--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
           <h3>Développeuse Web et Web Mobile junior</h3>
         </div>
       </header>
-
-      <address id="address">
-        <a
-          id="info1"
-          href="https://www.google.be/maps/search/+12+Rue+des+Olivier+53200+La+Roche-Neuville/@47.8798736,-0.7599633,14z?entry=ttu"
-          target="_blank"
-          >adresse: 12 Rue des Olivier <br />53200 La Roche-Neuville</a
-        >
-        <a id="info2" href="mailto:jane.doe@gmail.com"
-          >email: jane.doe@gmail.com</a
-        >
-        <a id="info3" href="tel:0606060606">n°: 0606060606</a>
-      </address>
-
-      <main class="bloc-content" id="Contenu">
-        <aside class="bloc-propos" id="A-propos">
+      <section>
+        <address id="address">
+          <a
+            id="info1"
+            href="https://www.google.be/maps/search/+12+Rue+des+Olivier+53200+La+Roche-Neuville/@47.8798736,-0.7599633,14z?entry=ttu"
+            target="_blank"
+            >adresse: 12 Rue des Olivier <br />53200 La Roche-Neuville</a
+          >
+          <a id="info2" href="mailto:jane.doe@gmail.com"
+            >email: jane.doe@gmail.com</a
+          >
+          <a id="info3" href="tel:0606060606">n°: 0606060606</a>
+        </address>
+      </section>
+      <main class="bloc-content">
+        <aside class="bloc-propos">
           <h1>
             <div class="element-propos propos1"><strong>A propos</strong></div>
           </h1>
-          <p>
+          <p id="indent">
             <small
               >Lorem ipsum dolor sit amet. Eum perferendis delectus et omnis
               optio quo illum velit est atque ratione et impedit veritatis. Ut
@@ -64,9 +64,9 @@
             </div>
           </h1>
           <ul>
-            <li>Français: Langue maternelle</li>
-            <li>Anglais: Intermédiaire</li>
-            <li>Néerlandais: Débutant</li>
+            <li><small>Français: Langue maternelle</small></li>
+            <li><small>Anglais: Intermédiaire</small></li>
+            <li><small>Néerlandais: Débutant</small></li>
           </ul>
           <h1>
             <div class="element-propos propos3">
@@ -74,14 +74,14 @@
             </div>
           </h1>
           <ul>
-            <li>Violon</li>
-            <li>Fitness</li>
-            <li>Jeux vidéos</li>
-            <li>Lecture</li>
-            <li>Natation</li>
+            <li><small>Violon</small></li>
+            <li><small>Fitness</small></li>
+            <li><small>Jeux vidéos</small></li>
+            <li><small>Lecture</small></li>
+            <li><small>Natation</small></li>
           </ul>
         </aside>
-        <section class="bloc-exp" id="Experiences">
+        <article class="bloc-exp">
           <h1>
             <div class="element-propos propos1">
               <strong>Expériences professionnelles</strong>
@@ -130,7 +130,7 @@
             <li>GitHub - Novice</li>
             <li>...</li>
           </ul>
-        </section>
+        </article>
       </main>
       <footer class="bottom">
         <br />
