Add correction balise

--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
       </section>
       <main class="bloc-content">
         <aside class="bloc-propos">
-          <div class="element-propos propos1"><strong>A propos</strong></div>
-            <p id="indent">
-              <h1>
-              <small
-                >Lorem ipsum dolor sit amet. Eum perferendis delectus et omnis
-                optio quo illum velit est atque ratione et impedit veritatis. Ut
-                odio aspernatur qui dignissimos omnis et ullam quam. Est quidem
-                expedita sit eveniet ipsum qui velit ratione et debitis eaque id
-                laborum omnis.</small
-              >
-            </h1>
-            </p>
+          <div class="element-propos propos1">
+            <h1><strong>A propos</strong></h1>
+          </div>
+          <p id="indent">
+            <small
+              >Lorem ipsum dolor sit amet. Eum perferendis delectus et omnis
+              optio quo illum velit est atque ratione et impedit veritatis. Ut
+              odio aspernatur qui dignissimos omnis et ullam quam. Est quidem
+              expedita sit eveniet ipsum qui velit ratione et debitis eaque id
+              laborum omnis.</small
+            >
+          </p>
           <div class="element-propos propos2">
             <h1>
               <strong>Langues parlées</strong>
