--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </ul>
         </aside>
         <article class="bloc-exp">
-          <div class="element-propos propos1">
+          <div class="experience">
             <h1>
               <strong>Expériences professionnelles</strong>
             </h1>
@@ -106,7 +106,7 @@
             <li>Mission 2...</li>
             <li>Mission 3...</li>
           </ul>
-          <div class="element-propos propos2">
+          <div class="experience2">
             <h1>
               <strong>Diplômes/Formations</strong>
             </h1>
@@ -117,7 +117,7 @@
           <h2><small>Diplôme/Formation n°2</small></h2>
           <p>Du XXX au XXX</p>
           <p>Nom de l'école</p>
-          <div class="element-propos propos3">
+          <div class="experience3">
             <h1>
               <strong>Compétences</strong>
             </h1>
