--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,100&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/icon" type="image/png" />
-    <link rel="icon" href="./icon/favicon.png" />
+    <link rel="icon" href="./assets/icon/github.png" type="image/png" />
+    <link rel="icon" href="./assets/icon/linkedin.png" type="image/png" />
+    <link rel="icon" href="./assets/icon/whatsapp.png" type="image/png" />
+    <link rel="icon" href="./assets/icon/favicon.png" />
   </head>
 
   <body>
     <div class="container">
       <header>
         <div id="header">
-          <a href="./images/R.png">
-            <img id="photo" src="./images/R.png" alt="photo Océane" />
+          <a href="./assets/images/R.png">
+            <img id="photo" src="./assets/images/R.png" alt="photo Océane" />
           </a>
           <h1>Taquin Océane</h1>
           <h3>Développeuse Web et Web Mobile junior</h3>
@@ -132,15 +134,19 @@
       </main>
       <footer class="bottom">
         <br />
-        <img class="bottom__logo" src="./icon/github.png" alt="logo github" />
         <img
           class="bottom__logo"
-          src="./icon/linkedin.png"
+          src="./assets/icon/github.png"
+          alt="logo github"
+        />
+        <img
+          class="bottom__logo"
+          src="./assets/icon/linkedin.png"
           alt="logo Linkedin"
         />
         <img
           class="bottom__logo"
-          src="./icon/whatsapp.png"
+          src="./assets/icon/whatsapp.png"
           alt="logo whatshapp"
         />
         <p id="maj">
